# flutter-iot-template

./: .gitignore  Makefile  README.md  docker-compose.yml  gitignore
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: database.py  dependencies.py
backend/app/items/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/: main.py
backend/tests/: test_items.py  test_main.py
edge_client/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  hello_client.py  pyproject.toml  requirements.txt
edge_client/src/: main.py
edge_client/tests/: test_main.py
flutter_app/: README.md  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/models/: item.dart
flutter_app/lib/screens/: edit_item_screen.dart  home_screen.dart
flutter_app/lib/services/: api_service.dart
