[project]
name = "edge-client"
version = "0.1.0"
description = "Edge-side client for IoT system"
requires-python = ">=3.9"
dependencies = [
    "requests"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
